--- a/manifest.plist
+++ b/manifest.plist
@@ -17,7 +17,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>co.allconnected.vpnmaster.pro</string>
+                <string>io.seedlab.pricetag</string>
                 <key>bundle-version</key>
                 <string>1.1</string>
                 <key>kind</key>
