--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://localhost/app.ipa</string>
+                    <string>http://192.168.50.213/app.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
